; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_nscdcli.c_close_nscd_connection__.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_nscdcli.c_close_nscd_connection__.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nscd_connection_ = type { i32, i32, i32 }

@close_nscd_connection = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_nscd_connection__(%struct.nscd_connection_* %0) #0 {
  %2 = alloca %struct.nscd_connection_*, align 8
  store %struct.nscd_connection_* %0, %struct.nscd_connection_** %2, align 8
  %3 = load i32, i32* @close_nscd_connection, align 4
  %4 = call i32 @TRACE_IN(i32 %3)
  %5 = load %struct.nscd_connection_*, %struct.nscd_connection_** %2, align 8
  %6 = icmp ne %struct.nscd_connection_* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load %struct.nscd_connection_*, %struct.nscd_connection_** %2, align 8
  %10 = getelementptr inbounds %struct.nscd_connection_, %struct.nscd_connection_* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @close(i32 %11)
  %13 = load %struct.nscd_connection_*, %struct.nscd_connection_** %2, align 8
  %14 = getelementptr inbounds %struct.nscd_connection_, %struct.nscd_connection_* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @close(i32 %15)
  %17 = load %struct.nscd_connection_*, %struct.nscd_connection_** %2, align 8
  %18 = getelementptr inbounds %struct.nscd_connection_, %struct.nscd_connection_* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @close(i32 %19)
  %21 = load %struct.nscd_connection_*, %struct.nscd_connection_** %2, align 8
  %22 = call i32 @free(%struct.nscd_connection_* %21)
  %23 = load i32, i32* @close_nscd_connection, align 4
  %24 = call i32 @TRACE_OUT(i32 %23)
  ret void
}

declare dso_local i32 @TRACE_IN(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(%struct.nscd_connection_*) #1

declare dso_local i32 @TRACE_OUT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
